remove dist/ and add .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ target/
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
+# Dioxus htmls
+dist/
+
 # Nix direnv and nix build
 .direnv/
 result
